@@ -1,46 +1,35 @@
 <configure
-    xmlns="http://namespaces.zope.org/zope">
+  xmlns="http://namespaces.zope.org/zope">
 
-    <include file="permissions.zcml" />
-    
-    <include package=".browser" />
-    
-    <!-- Local roles managed in the @@sharing view -->
-    <utility
-        name="Reader"
-        factory=".localroles.ReaderRole"
-        />
-        
-    <utility
-        name="Editor"
-        factory=".localroles.EditorRole"
-        />
-        
-    <utility
-        name="Contributor"
-        factory=".localroles.ContributorRole"
-        />
-        
-    <utility
-        name="Reviewer"
-        factory=".localroles.ReviewerRole"
-        />
-        
-    <!--
-    <utility
-        name="Manager"
-        factory=".localroles.ManagerRole"
-        />
-        
-    <utility
-        name="Owner"
-        factory=".localroles.OwnerRole"
-        />
-        
-    <utility
-        name="Member"
-        factory=".localroles.MemberRole"
-        />
-    -->
-    
+  <include file="permissions.zcml" />
+
+  <include package=".browser" />
+
+  <!-- Local roles managed in the @@sharing view -->
+  <utility
+    name="Reader"
+    factory=".localroles.ReaderRole"
+    />
+
+  <utility
+    name="Editor"
+    factory=".localroles.EditorRole"
+    />
+
+  <utility
+    name="Contributor"
+    factory=".localroles.ContributorRole"
+    />
+
+  <utility
+    name="Reviewer"
+    factory=".localroles.ReviewerRole"
+    />
+
+  <!-- Adapter for default workflow lookup -->
+  <adapter
+    factory=".workflowchain.ToolWorkflowChain"
+    trusted="y"
+    />
+
 </configure>
